chore: adding-fonts

--- a/layouts/partials/fonts.html
+++ b/layouts/partials/fonts.html
@@ -1,7 +1,7 @@
 <style>
     @font-face {
         font-family: 'Open Sans Regular';
-        src: url({{ "fonts/YsabeauSC/YsabeauSC-Regular.ttf" }}) format('truetype');
+        src: url({{ "fonts/YsabeauSC/YsabeauSC-Regular.ttf" | absURL }}) format('truetype');
         font-weight: normal;
         font-style: normal;
     }
